<resources>
    <string name="app_name">Frontend Delivery</string>
    <string name="edittext_firstname">Firstname</string>
    <string name="edittext_lastname">Lastname</string>
    <string name="edittext_username">Username</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_repeat_password">Repeat password</string>
    <string name="edittext_phone">Phone</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="imageview_delivery_logo"></string>
</resources>