<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
            android:layout_width="180dp"
            android:layout_height="130dp" app:srcCompat="@drawable/delivery_logo"
            android:id="@+id/ivDeliveryLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="@string/imageview_delivery_logo"
            android:scaleType="fitCenter"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etUsername"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDeliveryLogo" android:layout_marginTop="18dp"
            android:inputType="text" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/edittext_username" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="@color/colorPrimary"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" android:layout_marginTop="20dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:hint="@string/edittext_password" app:layout_constraintHorizontal_bias="0.0"
            android:backgroundTint="@color/colorPrimary"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bLogin"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:text="@string/button_login"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/white"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bRegister"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bLogin" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/button_register"
            android:background="@drawable/button_rounded_border" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.003"
            android:textColor="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>