<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity">

    <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/ibAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:src="@drawable/avatar0"
            android:scaleType="fitCenter"
            android:backgroundTint="@android:color/transparent"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etFirstname"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibAvatar" android:hint="@string/edittext_firstname"
            android:inputType="text" android:layout_marginTop="24dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary" app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintBottom_toTopOf="@+id/etLastname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etLastname"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFirstname" android:hint="@string/edittext_lastname"
            android:inputType="text" android:layout_marginTop="20dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etUsername"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLastname"
            android:hint="@string/edittext_username"
            android:inputType="text" android:layout_marginTop="20dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            android:hint="@string/edittext_password"
            android:inputType="text" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etRepeatPassword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:hint="@string/edittext_repeat_password"
            android:inputType="text" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:backgroundTint="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etPhone"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/edittext_phone"
            android:inputType="text" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:backgroundTint="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bRegister"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
            android:background="@drawable/button_rounded" android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword"
            app:layout_constraintVertical_bias="0.25"/>
</androidx.constraintlayout.widget.ConstraintLayout>